# bitbucket-cli-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/specs/: 00-overview.md  01-architecture.md  02-authentication.md  03-configuration.md  04-api-client.md  05-output.md  06-commands-pr.md  07-commands-repo.md  08-distribution.md  09-mcp-server.md  README.md
notes/: README.md  bitbucket-api.md  bitbucket-auth.md  github-cli.md  language-choice.md  mvp-scope.md  next-session.md
src/: bbrepo.rs  context.rs  error.rs  git.rs  iostreams.rs  lib.rs  main.rs  text.rs
src/api/: activity.rs  branch.rs  cache.rs  client.rs  comment.rs  debug.rs  errors.rs  mod.rs  pagination.rs  pull_request.rs  repository.rs  status.rs  transport.rs  types.rs  user.rs  workspace.rs
src/auth/: browser.rs  callback.rs  git_credential.rs  hosts.rs  keyring.rs  mod.rs  oauth.rs  user.rs
src/cli/: api.rs  auth.rs  browse.rs  completion.rs  config.rs  jq.rs  json_flags.rs  markdown.rs  messages.rs  mod.rs  pr.rs  prompter.rs  repo.rs  version.rs
src/cli/api/: fields.rs  jq.rs  mod.rs  pagination.rs
src/cli/auth/: git_credential.rs  login.rs  logout.rs  mod.rs  setup_git.rs  status.rs  switch.rs  token.rs
src/cli/config/: get.rs  list.rs  mod.rs  set.rs
src/cli/pr/: checkout.rs  checks.rs  close.rs  comment.rs  create.rs  diff.rs  display.rs  edit.rs  finder.rs  list.rs  markdown.rs  merge.rs  mod.rs  ready.rs  reopen.rs  review.rs  status.rs  view.rs
src/cli/repo/: clone.rs  create.rs  display.rs  fork.rs  list.rs  mod.rs  set_default.rs  view.rs
src/config/: hosts.rs  mod.rs  yaml.rs
src/iostreams/: spinner.rs  table.rs
src/update/: mod.rs
tests/: api_cli.rs  api_transport.rs  cli_smoke.rs  config_cli.rs
