[package]
name = "bb"
version = "0.0.0-dev"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Bitbucket Cloud command-line tool"
repository = "https://github.com/hbackman/bitbucket-cli"

[[bin]]
name = "bb"
path = "src/main.rs"

[lib]
name = "bb"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
owo-colors = "4"
anstream = "0.6"
url = "2"
directories = "5"
oauth2 = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
