[package]
name = "bb"
version = "0.0.0-dev"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Bitbucket Cloud command-line tool"
repository = "https://github.com/hbackman/bitbucket-cli"

[[bin]]
name = "bb"
path = "src/main.rs"

[lib]
name = "bb"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal", "io-util", "io-std", "sync", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
owo-colors = "4"
anstream = "0.6"
url = "2"
directories = "5"
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }
webbrowser = "1"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing", "serde-well-known"] }
tempfile = "3"
async-stream = "0.3"
bytes = "1"
humantime = "2"
sha2 = "0.10"
hex = "0.4"
futures = { version = "0.3", default-features = false, features = ["std"] }
jaq-core = "1"
jaq-interpret = "1"
jaq-parse = "1"
jaq-std = "1"
dialoguer = "0.11"
terminal_size = "0.4"
unicode-width = "0.2"
clap_complete = "4"
semver = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
futures = { version = "0.3", default-features = false, features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
